# python-template

./: README.md  pyproject.toml
.github/workflows/: ci-greet-user.yaml  ci-hello-uv.yaml
greet-user/: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
greet-user/docs/: contributing.md  index.md  project-layout.md
greet-user/docs/api/: farewell.md  get_user.md  greet.md  greet_user.md  main.md
greet-user/src/greet_user/: __init__.py  farewell.py  greet.py  main.py
greet-user/src/greet_user/get_user/: __init__.py  user.py
greet-user/tests/: conftest.py  test_farewell.py  test_greet.py  test_main.py  test_user.py
hello-uv/: .pre-commit-config.yaml  README.md  pyproject.toml
hello-uv/src/hello_uv/: __init__.py  farewell.py  greet.py  main.py
hello-uv/tests/: test_farewell.py  test_greet.py  test_main.py
