[project]
name = "python-template"
version = "0.1.0"
description = "Just a parent project for all python template projects"
readme = "README.md"
authors = [
    { name = "ravy", email = "ravy@users.noreply.github.com" }
]
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.14",
  "pre-commit>=4.3"
]

[tool.uv.workspace]
members = [
    "greet-user",
]
