[project]
name = "python-template"
version = "0.1.0"
description = "Just a parent project for all python template projects"
readme = "README.md"
authors = [
    { name = "ravy", email = "ravy@users.noreply.github.com" }
]
dependencies = []

[tool.uv.workspace]
members = [
    "uvtest/helloworld",
]
