[project]
name = "greet-user"
version = "0.1.0"
description = "Simple Python Project Sample."
readme = "README.md"
authors = [
    { name = "ravy", email = "ravy@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
  "pytest >= 8.4",
  "ruff>=0.14",
  "pytest-cov>=7.0",
  "pre-commit>=4.3",
  "mkdocs-material>=9.6",
  "mkdocstrings-python>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
greet = "greet_user.main:main"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
