[project]
name = "hello-uv"
version = "0.1.0"
description = "A simple Python project with uv."
readme = "README.md"
authors = [
    { name = "ravy", email = "ravy@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
  "pytest >= 8.0",
  "ruff>=0.14.2",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.7.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
hello = "hello_uv.main:main"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
